changes to the error box

--- a/index.html
+++ b/index.html
@@ -220,11 +220,10 @@
     error.style.top = `${Math.random()*(window.innerHeight-180)}px`;
     error.innerHTML = `
       <div class="error-titlebar">
-        <span>Error 440 - Session Timeout</span>
+        <span>Error 440 - Identity Expired</span>
         <button class="close-btn">×</button>
       </div>
       <div class="error-content">
-        <p><b>440: Identity Expired</b></p>
         <p>Your current sense of self has timed out.<br>
         Please log in again — or take a deep breath and remember who you are.</p>
         <div class="error-buttons">
